fixed quotes overflowing boundaries

--- a/assets/css/stylemain.css
+++ b/assets/css/stylemain.css
@@ -529,6 +529,8 @@ blockquote {
     display: flex;
     flex-direction: column;
     margin: 10px 0 10px 0;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 blockquote[blame]::after {
